Fix CSS layout issues, and add button animations.
Corrected various CSS properties and values for better styling.

--- a/Style.css
+++ b/Style.css
@@ -8,11 +8,13 @@ body {
 
   header {background: #DC4D01;
     color: #fff;
+          text-align: center;
 }
   
   .navbar {
     dispaly: flex;
     justify-content: space-between;
+    text-align: center;
     padding: 15px 20px;
 }
   
@@ -32,14 +34,14 @@ body {
 }
 
 .problem-solution {
-    padding: 60px 20px;
+    padding: 100px 200px;
     text align: center;
     background: #FFDFBF;
 }
 
 h2 {
  font-family: helectiva, serif;
- font-size: 9px
+ font-size: 20px
 }
     
 
@@ -48,6 +50,16 @@ h2 {
   background: #DC4D01;
   color: #DC4D01;
   boarder: white 9px;
+   border-radius: 20px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out; transition-delay: 0.1s; transition-duration: 0.3s;
+    text-align: center; 
+}
+
+.Button:hover {
+    background-color: #634beb;
+    transform: scale(1.1);
 }
 
     
